# Rust

./: Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: ci.yml
Data Engineering with Rust/: README.md
Data Engineering with Rust/Module_1/final_week_reflection_and_challenge/: Cargo.toml  Makefile
Data Engineering with Rust/Module_1/rust_sequences_and_maps/: Cargo.toml  Makefile
Data Engineering with Rust/_290724/: Cargo.toml
exercise_1/src/: main.rs
exercise_10_final_w3/: Cargo.toml
exercise_10_final_w3/src/: main.rs
exercise_12/src/: main.rs
exercise_14/tests/: test_1.rs
exercise_15/src/: lib.rs
exercise_2/src/: main.rs
exercise_3/: new_file.txt
exercise_3/src/: main.rs
exercise_4/src/: main.rs
exercise_6/: Cargo.toml
exercise_6/src/: main.rs
exercise_7/src/: main.rs
exercise_8/src/: main.rs
my_library/src/: lib.rs
project_1/src/: main.rs
project_10/src/: main.rs
project_11/src/: main.rs
project_12/src/: main.rs
project_13/: Cargo.toml
project_13/src/: main.rs  print.rs
project_14/: Makefile
project_14/src/: colors.rs  config.rs  lib.rs
project_14/tests/: test_colors.rs  test_simple.rs  test_stdin.rs
project_2/src/: main.rs
project_3/src/: main.rs
project_4/src/: main.rs
project_4_error_handling_with_match/: Cargo.toml
project_4_error_handling_with_match/src/: main.rs
project_5/src/: main.rs
project_6/src/: main.rs
project_7/src/: main.rs
project_8/src/: main.rs
project_9/src/: main.rs
rusty-journal/: Cargo.toml
rusty-journal/src/: cli.rs
src/: main.rs
(+18 files in other folders)
